--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,5 +1,5 @@
 <form method="POST" action="/recipes/<%=@recipe.id%>">
-  <input id="hidden" type="hidden" name="_method" 
+  <input id="hidden" type="hidden" name="_method" value="patch"
   
   
   
