Automatically backed up by Learn

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -3,6 +3,10 @@
   
   <p>Recipe Name: <input type="text" name="name" value="<%= @recipe.name %>"></p>
   
+  <p>Recipe Name: <input type="text" name="name" value="<%= @recipe.name %>"></p>
+    
+  <p>Recipe Name: <input type="text" name="name" value="<%= @recipe.name %>"></p>
+  
   
   
 </form>
