--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -3,9 +3,9 @@
   
   <p>Recipe Name: <input type="text" name="name" value="<%= @recipe.name %>"></p>
   
-  <p>Ingredients: <input type="text" name="name" value="<%= @recipe.name %>"></p>
+  <p>Ingredients: <input type="text" name="name" value="<%= @recipe.ingredients %>"></p>
     
-  <p>Cook Time: <input type="text" name="name" value="<%= @recipe.name %>"></p>
+  <p>Cook Time: <input type="text" name="name" value="<%= @recipe.cook_time %>"></p>
   
   <input type="submit">
 </form>
