--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 <% @recipes.each do |recipe| %>
   <ul>
     <li>
-      <a href="/recipes/<%= recipe.id %>">Recipe Name: <%= recipe.name %></a>
+      <a href="/recipes/<%= recipe.id %>"><%= recipe.name %></a>
     </li>
   </ul>
 <% end %>
