Automatically backed up by Learn

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -7,5 +7,5 @@
     
   <p>Cook Time: <input type="text" name="name" id="cook_time" value="<%= @recipe.cook_time %>"></p>
   
-  <input type="submit">
+  <input type="submit" value="Submit">
 </form>
